--- a/manifest.json
+++ b/manifest.json
@@ -58,9 +58,7 @@
                     "<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>",
                     "<uses-permission android:name=\"android.permission.WRITE_EXTERNAL_STORAGE\"/>",
                     "<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>",
-                    "<uses-permission android:name=\"android.permission.WRITE_SMS\"/>",
-                    "<uses-permission android:name=\"android.permission.BLUETOOTH\"/>",
-                    "<uses-permission android:name=\"android.permission.BLUETOOTH_ADMIN\"/>"
+                    "<uses-permission android:name=\"android.permission.WRITE_SMS\"/>"
                 ]
             },
             /* ios打包配置 */
@@ -69,7 +67,8 @@
                 "privacyDescription" : {
                     "NSCameraUsageDescription" : "获取您的面部数据用于登录",
                     "NSFaceIDUsageDescription" : "获取您的面部数据用于登录"
-                }
+                },
+                "idfa" : false
             },
             /* SDK配置 */
             "sdkConfigs" : {
